apps/metropolitan-real/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: metropolitan-real
  name: metropolitan-real
