apps/metropolitan-real/postgres17.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: postgres17
  namespace: metropolitan-real
spec:
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
  selector:
    app: postgres17
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres17
  namespace: metropolitan-real
  annotations:
    fluxcd.io/automated: "false"
spec:
  serviceName: postgres17
  replicas: 1
  selector:
    matchLabels:
      app: postgres17
  template:
    metadata:
      labels:
        app: postgres17
    spec:
      securityContext:
        fsGroup: 70
      volumes:
        - name: postgres-data
          hostPath:
            path: /var/local/kube-volumes/metropolitan-real-postgres17
            type: DirectoryOrCreate
      containers:
        - name: postgres
          image: postgres:17.5-bullseye
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
          resources:
            requests:
              cpu: "0"
              memory: "0"
            limits:
              cpu: 300m
              memory: 200Mi
      terminationGracePeriodSeconds: 10
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: storage
                    operator: In
                    values:
                      - db
