apps/metropolitan-real/app.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: metropolitanreal
  namespace: metropolitan-real
spec:
  ports:
    - port: 9000
      targetPort: 9000
      protocol: TCP
  selector:
    app: metropolitanreal-app
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-metropolitanreal
  namespace: metropolitan-real
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/frontend-entry-points: http
    traefik.ingress.kubernetes.io/buffering: |
      maxrequestbodybytes: 31457280
      memrequestbodybytes: 62914560
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  tls:
    - hosts:
        - metropolitanreal.kislan.sk
      secretName: test-metropolitanreal-sk
  rules:
    - host: metropolitanreal.kislan.sk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: metropolitanreal
                port:
                  number: 9000
# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: metropolitanreal
#   namespace: metropolitan-real
#   annotations:
#     cert-manager.io/cluster-issuer: "letsencrypt"
#     kubernetes.io/ingress.class: traefik
#     traefik.ingress.kubernetes.io/frontend-entry-points: http
#     traefik.ingress.kubernetes.io/buffering: |
#       maxrequestbodybytes: 31457280
#       memrequestbodybytes: 62914560
#     traefik.ingress.kubernetes.io/router.entrypoints: websecure
#     traefik.ingress.kubernetes.io/router.tls: "true"
# spec:
#   tls:
#     - hosts:
#         - metropolitanreal.sk
#         - www.metropolitanreal.sk
#       secretName: metropolitanreal-sk
#   rules:
#     - host: metropolitanreal.sk
#       http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: metropolitanreal
#                 port:
#                   number: 9000
#     - host: www.metropolitanreal.sk
#       http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: metropolitanreal
#                 port:
#                   number: 9000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metropolitanreal-app
  namespace: metropolitan-real
  annotations:
    fluxcd.io/automated: "false"
    fluxcd.io/tag.app: "regexp:^.*-master-.*$"
spec:
  selector:
    matchLabels:
      app: metropolitanreal-app
  replicas: 1
  template:
    metadata:
      labels:
        app: metropolitanreal-app
    spec:
      imagePullSecrets:
        - name: gitlab-docker-registry-credentials
      containers:
        - name: metropolitanreal-app
          image: registry.gitlab.com/metropolitan-real/metropolitan-real:app-1762463295-master-97219e5163c38eed89dc5e80278e423a11bdfb33
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9000
          resources:
            requests:
              cpu: 250m
              memory: 200Mi
            limits:
              cpu: 500m
              memory: 500Mi
